# OpenGLPractice

./: CMakeLists.txt  README.md
checkpoints/: 1_lines.cpp  2_triangles.cpp  3_transformations.cpp  4_blending.cpp  5_mesh.cpp  6_mvp.cpp
src/: CMakeLists.txt  Color.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Mesh.cpp  Mesh.hpp  main.cpp
